gsoc/provencore/include/libs/pnc/syscall_internal.h

__BEGIN_DECLS
typedef struct smc32_params smc32_params_t;
typedef struct smc64_params smc64_params_t;
typedef struct mcall_params mcall_params_t;
typedef struct hvc32_params hvc32_params_t;
int pnc_slow_kernel_call(int callnr, message *payload);
int pnc_fork(_Bool *is_parent, s_pid_t *child_pid);
int pnc_kill(s_pid_t target, uint32_t signal);
int pnc_exec(const char *path, char *const *argv,
             char *const *envp, uint64_t quota);
int pnc_exit(uint32_t code);
int pnc_brk(const void *vaddr, void **new_vaddr);
int pnc_iomap(unsigned int device_id, paddr_t paddr, size_t length,
              void **vaddr);
int pnc_iounmap(void *vaddr);
int pnc_irqctl(unsigned int request, unsigned int irq, unsigned int policy,
               unsigned int id, unsigned int status, unsigned int *hook_id);
int pnc_platctl(unsigned int device_id, unsigned int request, message *payload);
int pnc_smc(smc32_params_t *params);
int pnc_smc64(smc64_params_t *params);
int pnc_mcall(mcall_params_t *params);
int pnc_hvc(hvc32_params_t *params);
__access_none(3)
int pnc_setauth(int mode, s_pid_t grantee, void const *vaddr,
                size_t length, s_pid_t effector, s_pid_t revoker,
                unsigned int *auth_handle);
int pnc_vircopy(s_pid_t src, void const *src_vaddr, s_pid_t dst,
                void *dst_vaddr, size_t length);
int pnc_revoke(s_pid_t owner, unsigned int auth_handle);
int pnc_change_grantee(s_pid_t owner, unsigned int auth_handle,
                       s_pid_t new_grantee);
int pnc_change_effector(s_pid_t owner, unsigned int auth_handle,
                        s_pid_t new_effector);
int pnc_change_revoker(s_pid_t owner, unsigned int auth_handle,
                       s_pid_t new_revoker);
int pnc_shm_alloc(unsigned int nr_pages, unsigned int *id, void **vaddr);
int pnc_shm_register(unsigned int id, unsigned int *nr_pages, void **vaddr);
int pnc_shm_unregister(unsigned int id);
int pnc_shm_transfer(unsigned int id, s_pid_t target);
int pnc_get_pid(s_pid_t *pid);
int pnc_get_domain(s_pid_t object, unsigned int *dom);
int pnc_get_times(s_pid_t object, uint64_t *times);
int pnc_get_uptime(uint64_t *uptime);
int pnc_get_quota(s_pid_t object,
                  unsigned int *quota, unsigned int *max_quota);
int pnc_get_data(s_pid_t object,
                 void **pdata_base, unsigned int *pdata_size);
int pnc_get_metadata_by_app(char const *elf_name, size_t length,
                            uint32_t *data_size, uint32_t *minfo,
                            uint32_t *elf_nr);
int pnc_get_metadata_by_pid(s_pid_t pid, uint32_t *data_size,
                            uint32_t *minfo, uint32_t *elf_nr);
int pnc_get_shm_token_owner(unsigned int id, s_pid_t *owner);
int pnc_get_phys_buff(void **vaddr, paddr_t *paddr, unsigned int *nr_pages);
int pnc_get_sysproc_pid_by_name(char const *sysproc_name, size_t length,
                                s_pid_t *pid);
int pnc_get_capabilities(s_pid_t object,
                         uint32_t *priv_flags, uint32_t *trap_mask,
                         uint64_t *call_mask);
int pnc_get_allowed_ipc(s_pid_t object,
                        s_pid_t target, uint32_t *trap_mask);