gsoc/provencore/crates/pnc-rs/src/libpnc/static-wrappers.h

int pnc_rs_send(s_pid_t dest, const message *mptr);
int pnc_rs_receive(s_pid_t src, message *mptr, uint64_t timeout);
int pnc_rs_send_nonblock(s_pid_t dest, const message *mptr);
int pnc_rs_receive_nonblock(s_pid_t src, message *mptr);
int pnc_rs_receive_any(message *mptr, uint64_t timeout);
int pnc_rs_receive_any_nonblock(message *mptr);
int pnc_rs_receive_hw(message *mptr, uint64_t timeout);
int pnc_rs_receive_hw_nonblock(message *mptr);
int pnc_rs_sendrec(s_pid_t src_dst, message *mptr);
int pnc_rs_sendrec_nonblock(s_pid_t src_dst, message *mptr);
int pnc_rs_notify(s_pid_t dest);
int pnc_rs_sleep(uint64_t timeout);
int pnc_rs_irqsetpolicy(
		unsigned int irq,
		unsigned int policy,
		unsigned int notify_id,
		unsigned int status,
		unsigned int *hook_id);
int pnc_rs_irqrmpolicy(unsigned int hook_id);
int pnc_rs_irqstatus(unsigned int hook_id, unsigned int status);
int pnc_rs_irqdisable(unsigned int hook_id);
int pnc_rs_irqenable(unsigned int hook_id);
int pnc_rs_irqrelease(unsigned int hook_id);