gsoc/provencore/include/libs/pnc/syscall.h


int udelay(uint64_t microseconds);
int get_pid(s_pid_t *pid);
int s_kill(s_pid_t target, uint32_t signal);
int s_execve(const char *path, char *const argv[],
             char *const envp[], size_t quota);
int s_fork(s_pid_t *pid);
static inline int uptime(uint64_t *uptime)
{
    errno = get_uptime(uptime);
    return errno;
}